<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/layout_border_round"
    android:layoutDirection="ltr"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/Tv_DialogTitle"
        style="@style/TextWhiteBoild_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/ProductQuantity"
        android:gravity="center|right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        style="@style/TextWhiteBoild_6"
        android:id="@+id/Tv_Dialog_count_kala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DoubleDot"
        app:layout_constraintBottom_toBottomOf="@+id/Tv_DialogTitle"
        app:layout_constraintEnd_toStartOf="@+id/Tv_DialogTitle"
        app:layout_constraintTop_toTopOf="@+id/Tv_DialogTitle" />

    <EditText
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:textIsSelectable="true"
        android:windowSoftInputMode="stateVisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_DialogTitle">

        <requestFocus />

    </EditText>

    <life.sabujak.roundedbutton.RoundedButton
        android:id="@+id/BtnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/Cancel"
        style="@style/TextWhiteBoild_3"
        app:buttonCornerRadius="5dp"
        app:buttonGradientEndColor="@color/colorAccent"
        app:buttonGradientStartColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number" />


    <life.sabujak.roundedbutton.RoundedButton
        android:id="@+id/BtnOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/Ok"
        style="@style/TextWhiteBoild_3"
        app:buttonCornerRadius="5dp"
        app:buttonGradientEndColor="@color/colorAccent"
        app:buttonGradientStartColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/tv_number" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />


</android.support.constraint.ConstraintLayout>