<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gold_background"
    android:fillViewport="false">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="187dp">

            <ImageView
                android:id="@+id/img_visit_path"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/path2" />

            <ImageView
                android:id="@+id/img_visit_path_Total"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/path1" />


            <TextView
                android:id="@+id/tv_visit_path"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_path"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_visit_path"
                app:layout_constraintStart_toStartOf="@+id/img_visit_path"
                app:layout_constraintTop_toBottomOf="@+id/img_visit_path" />

            <TextView
                android:id="@+id/tv_visit_path_Total"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_path_per_month"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_visit_path_Total"
                app:layout_constraintStart_toStartOf="@+id/img_visit_path_Total"
                app:layout_constraintTop_toBottomOf="@+id/img_visit_path_Total" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout11"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:id="@+id/img_view_orders"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/order2" />

            <ImageView
                android:id="@+id/img_visitor_info"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/customer1" />

            <TextView
                android:id="@+id/tv_view_orders"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_orders"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_view_orders"
                app:layout_constraintStart_toStartOf="@+id/img_view_orders"
                app:layout_constraintTop_toBottomOf="@+id/img_view_orders" />

            <TextView
                android:id="@+id/tv_visitor_info"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitor_info"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_visitor_info"
                app:layout_constraintStart_toStartOf="@+id/img_visitor_info"
                app:layout_constraintTop_toBottomOf="@+id/img_visitor_info" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout12"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/img_catalog"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline26"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/order1" />

            <ImageView
                android:id="@+id/img_product_info"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/product1" />

            <TextView
                android:id="@+id/tv_catalog"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catalog"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_catalog"
                app:layout_constraintStart_toStartOf="@+id/img_catalog"
                app:layout_constraintTop_toBottomOf="@+id/img_catalog" />

            <TextView
                android:id="@+id/tv_product_info"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_info"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_product_info"
                app:layout_constraintStart_toStartOf="@+id/img_product_info"
                app:layout_constraintTop_toBottomOf="@+id/img_product_info" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout13"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/img_customer"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline27"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/customer2" />

            <ImageView
                android:id="@+id/img_Tracking"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline27"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/loc1" />


            <TextView
                android:id="@+id/tv_customers"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customers"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_customer"
                app:layout_constraintStart_toStartOf="@+id/img_customer"
                app:layout_constraintTop_toBottomOf="@+id/img_customer" />


            <TextView
                android:id="@+id/tv_test"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracking"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_Tracking"
                app:layout_constraintStart_toStartOf="@+id/img_Tracking"
                app:layout_constraintTop_toBottomOf="@+id/img_Tracking" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout14"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/img_settings"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline28"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/settings4" />

            <ImageView
                android:id="@+id/img_update"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline28"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/update" />

            <TextView
                android:id="@+id/tv_settings"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_settings"
                app:layout_constraintStart_toStartOf="@+id/img_settings"
                app:layout_constraintTop_toBottomOf="@+id/img_settings" />

            <TextView
                android:id="@+id/tv_update"
                style="@style/TextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="@dimen/H2"
                app:layout_constraintEnd_toEndOf="@+id/img_update"
                app:layout_constraintStart_toStartOf="@+id/img_update"
                app:layout_constraintTop_toBottomOf="@+id/img_update" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>